--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
          https://firebase.google.com/docs/web/setup#available-libraries -->
     
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyC4BUBzZyI9XgTnaOtXIDLGD7uIUMiElGc",
-        authDomain: "c39-fruitcatcher.firebaseapp.com",
-        databaseURL: "https://c39-fruitcatcher.firebaseio.com",
-        projectId: "c39-fruitcatcher",
-        storageBucket: "c39-fruitcatcher.appspot.com",
-        messagingSenderId: "686122669825",
-        appId: "1:686122669825:web:489d7ecfc2fcb4f9a66d00"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
+   
+      <script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyD1zM8xUVadqaT2-YPwEpSDJXPSrpd4e2Y",
+    authDomain: "fcg1-d6690.firebaseapp.com",
+    databaseURL: "https://fcg1-d6690-default-rtdb.firebaseio.com",
+    projectId: "fcg1-d6690",
+    storageBucket: "fcg1-d6690.appspot.com",
+    messagingSenderId: "404415148722",
+    appId: "1:404415148722:web:7a5b0992380257be008fab"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 
     <!--Add Your JS files here -->
     <script src="js/player.js"></script>
